--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         async function getBlockHeight() {
             try {
                 await connect();
-                const block = await provider.getBlockNumber();
+                const block = await tenderlyProvider.getBlockNumber();
                 document.getElementById("blockHeight").innerText = "Current block: " + block;
             } catch (err) {
                 console.error("Error getting block height:", err);
